NAK-964 Adding Rest of the code
