# src/ska_oso_slt_services/rest/openapi/slt-openapi-v1.yaml
@@ -1,157 +1,111 @@
 openapi: 3.0.0
 info:
   title: Shift Log Tool API
-  description: 'This OpenAPI document defines the API for the Shift Log Tool REST service'
-  license:
-    name: BSD-3-Clause
-    url: https://opensource.org/licenses/BSD-3-Clause
+  description: API for managing shifts, including creating, updating, and retrieving shift information.
   version: 1.0.0
 servers:
-# This default is overwritten when the application is deployed to include the actual namespace if it is different to the 'ska-SLT' default
 - url: ska-oso-slt-services/slt/api/v1/
-
 paths:
-
-  /shift:
-    post:
-      summary: Updates an Shift Data by identifier
-      description: |
-        Updates the Shift Data with the given identifier
-        in the underlying data store, creating a new version.
-        If the identifier does not exist in the data store, a not found error will be returned.
-      operationId: ska_oso_slt_services.rest.api.resources.post_shift_data
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: './slt-schema-openapi-v1.yaml#/SLT'
-        required: true
-      responses:
-        "200":
-          description: OK, the Shift Data was created or updated
-          content:
-            application/json:
-              schema:
-                type: object
-
-        "400":
-          $ref: '#/components/responses/BadRequest'
-        "404":
-          $ref: '#/components/responses/NotFound'
-        "422":
-          $ref: '#/components/responses/UnprocessableEntity'
-        "500":
-          $ref: '#/components/responses/InternalServerError'
-
-  /shift/{shift_id}:
-    parameters:
-    - name: shift_id
-      in: path
-      required: true
-      style: simple
-      explode: false
-      schema:
-        type: string
-    # get:
-    #   summary: Get SLT data filter by the query parameter
-    #   description: |
-    #     Retrieves the SLT data for the given start time and end time.
-    #   operationId: ska_oso_slt_services.rest.api.resources.get_shift_history_data_with_id
-
-    #   responses:
-    #     "200":
-    #       description: OK
-    #       content:
-    #         application/json:
-    #           schema:
-    #             type: array
-    #             items:
-    #               type: object
-    #     "400":
-    #       $ref: '#/components/responses/BadRequest'
-    #     "404":
-    #       $ref: '#/components/responses/NotFound'
-    #     "422":
-    #       $ref: '#/components/responses/UnprocessableEntity'
-    #     "500":
-    #       $ref: '#/components/responses/InternalServerError'
-
-    put:
-      summary: Updates an Shift Data by identifier
-      description: |
-        Updates the Shift Data with the given identifier
-        in the underlying data store, creating a new version.
-        If the identifier does not exist in the data store, a not found error will be returned.
-      operationId: ska_oso_slt_services.rest.api.resources.put_shift_data
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: './slt-dbschema-openapi-v1.yaml#/SLTDB'
-        required: true
-      responses:
-        "200":
-          description: OK, the Shift Data was created or updated
-          content:
-            application/json:
-              schema:
-                type: object
-
-        "400":
-          $ref: '#/components/responses/BadRequest'
-        "404":
-          $ref: '#/components/responses/NotFound'
-        "422":
-          $ref: '#/components/responses/UnprocessableEntity'
-        "500":
-          $ref: '#/components/responses/InternalServerError'
-
-  /shift_log:
+  /shifts:
     get:
-      summary: Get SLT data filter by the query parameter
-      description: |
-        Retrieves the SLT data for the given shift start time and shift end time. 
-      operationId: ska_oso_slt_services.rest.api.resources.get_eb_data_with_sbi_status
+      summary: Get all shifts
+      description: Retrieve all shifts, optionally filtering by start and end date.
+      operationId: ska_oso_slt_services.rest.api.resources.get_shifts
       parameters:
-        - $ref: '#/components/parameters/created_after'
-        - $ref: '#/components/parameters/created_before'
-      
+        - in: query
+          name: shift_start
+          schema:
+            type: string
+            #format: date-time
+          description: Filter by shift start time.
+        - in: query
+          name: shift_end
+          schema:
+            type: string
+            #format: date-time
+          description: Filter by shift end time.
       responses:
-          "200":
-            description: OK, the Shift Data was created or updated
+        "200":
+          description: A list of shifts.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Shift'
+        "400":
+          $ref: '#/components/responses/BadRequest'
+        "500":
+          $ref: '#/components/responses/InternalServerError'
+    post:
+          summary: Create a new shift
+          description: Create a new shift with the given details.
+          operationId: ska_oso_slt_services.rest.api.resources.create_shift
+          requestBody:
+            required: true
             content:
               application/json:
                 schema:
-                  type: object
+                  $ref: '#/components/schemas/CreateShift'
+          responses:
+              "201":
+                description: The created shift.
+                content:
+                  application/json:
+                    schema:
+                      $ref: '#/components/schemas/Shift'
+              "400":
+                $ref: '#/components/responses/BadRequest'
+              "422":
+                $ref: '#/components/responses/UnprocessableEntity'
+              "500":
+                $ref: '#/components/responses/InternalServerError'
 
-          "400":
-            $ref: '#/components/responses/BadRequest'
-          "404":
-            $ref: '#/components/responses/NotFound'
-          "422":
-            $ref: '#/components/responses/UnprocessableEntity'
-          "500":
-            $ref: '#/components/responses/InternalServerError'
-
-  /shift/history:
+  /shifts/{shift_id}:
     get:
-      summary: Get SLT data filter by the query parameter
-      description: |
-        Retrieves the SLT data for the given shift start time and shift end time.
-      operationId: ska_oso_slt_services.rest.api.resources.get_shift_history_data_with_date
+      summary: Get a shift by ID
+      description: Retrieve the details of a shift by its ID.
+      operationId: ska_oso_slt_services.rest.api.resources.get_shift
       parameters:
-        - $ref: '#/components/parameters/shift_start_time'
-        - $ref: '#/components/parameters/shift_end_time'
-        - $ref: '#/components/parameters/shift_id'
-
+        - in: path
+          name: shift_id
+          required: true
+          schema:
+            type: integer
       responses:
         "200":
-          description: OK, the Shift Data was created or updated
+          description: The details of the shift.
           content:
             application/json:
               schema:
-                type: object
-
+                $ref: '#/components/schemas/Shift'
+        "404":
+          $ref: '#/components/responses/NotFound'
+        "500":
+          $ref: '#/components/responses/InternalServerError'
+    put:
+      summary: Update a shift
+      description: Update the details of an existing shift.
+      operationId: ska_oso_slt_services.rest.api.resources.update_shift
+      parameters:
+        - in: path
+          name: shift_id
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateShift'
+      responses:
+        "201":
+          description: The updated shift.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Shift'
         "400":
           $ref: '#/components/responses/BadRequest'
         "404":
@@ -160,97 +114,208 @@ paths:
           $ref: '#/components/responses/UnprocessableEntity'
         "500":
           $ref: '#/components/responses/InternalServerError'
-      
+
+
+  /shifts/{current_shift_id}/logs_update:
+    put:
+      summary: Update shift log information
+      description: Update the shift logs based on new information from external data sources.
+      operationId: ska_oso_slt_services.rest.api.resources.updated_shift_log_info
+      parameters:
+        - in: path
+          name: current_shift_id
+          required: true
+          schema:
+            type: integer
+      responses:
+        "204":
+          description: Success, no new EB found in ODA.
+        "201":
+          description: SHift Logs Info updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Shift'
+        "400":
+          $ref: '#/components/responses/BadRequest'
+        "404":
+          $ref: '#/components/responses/NotFound'
+        "422":
+          $ref: '#/components/responses/UnprocessableEntity'
+        "500":
+          $ref: '#/components/responses/InternalServerError'
 components:
-  parameters:
-    shift_start_time:
-      in: query
-      name: shift_start_time
-      schema:
-        type: string
-      required: true
-      example: 2024-07-12T15:43:53.971548+00:00
+  schemas:
+    CreateShift:
+      type: object
+      properties:
+        shift_operator:
+          type: object
+          properties:
+            name:
+              type: string
+              example: "John Doe"
+        annotations:
+          type: string
+          example: "Routine maintenance shift."
+        comments:
+          type: string
+          example: "At shift start All systems operational."
 
-    shift_end_time:
-      in: query
-      name: shift_end_time
-      schema:
-        type: string
-      required: false
-      example: 2024-07-12T15:43:53.971548+00:00
+    UpdateShift:
+      type: object
+      properties:
+        shift_end:
+          type: string
+          format: date-time
+          example: "2024-07-01T16:00:00"
+        annotations:
+          type: string
+          example: "Routine maintenance shift."
+        comments:
+          type: string
+          example: "All systems operational."
+        media:
+          type: array
+          items:
+            type: object
+            properties:
+              type:
+                type: string
+                example: "image"
+              path:
+                type: string
+                example: "/path/to/image1.png"
 
-    created_after:
-      in: query
-      name: created_after
-      schema:
-        type: string
-      required: true
-      example: 2024-07-12T15:43:53.971548+00:00
-
-    created_before:
-      in: query
-      name: created_before
-      schema:
-        type: string
-      required: false
-      example: 2024-07-12T15:43:53.971548+00:00
-
-    shift_id:
-      in: query
-      name: shift_id
-      schema:
-        type: string
-      required: false
-      example: slt-mvp001-42000
-
+    Shift:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        shift_start:
+          type: string
+          format: date-time
+          nullable: true
+          example: "2024-07-01T08:00:00"
+        shift_end:
+          type: string
+          format: date-time
+          nullable: true
+          example: "2024-07-01T16:00:00"
+        shift_operator:
+          type: object
+          nullable: true
+          properties:
+            name:
+              type: string
+              example: "John Doe"
+        shift_logs:
+          type: array
+          nullable: true
+          items:
+            type: object
+            properties:
+              info:
+                type: object
+                example:
+                  eb_id: "eb-t0001-20240801-00004"
+                  sbd_ref: "sbd-t0001-20240801-00002"
+                  sbi_ref: "sbi-t0001-20240801-00003"
+                  metadata:
+                    version: 1
+                    created_by: "DefaultUser"
+                    created_on: "2024-08-01T17:24:38.004027Z"
+                    last_modified_by: "DefaultUser"
+                    last_modified_on: "2024-08-01T17:24:38.004027Z"
+                  interface: "https://schema.skao.int/ska-oso-pdm-eb/0.1"
+                  telescope: "ska_mid"
+                  sbi_status: "observed"
+                  sbd_version: 1
+                  request_responses: []
+              source:
+                type: string
+                example: "ODA"
+              log_time:
+                type: string
+                format: date-time
+                example: "2024-08-02T17:13:41.388305"
+        media:
+          type: array
+          nullable: true
+          items:
+            type: object
+            properties:
+              type:
+                type: string
+                example: "image"
+              path:
+                type: string
+                example: "/path/to/image1.png"
+        annotations:
+          type: string
+          nullable: true
+          example: "Routine maintenance shift."
+        comments:
+          type: string
+          nullable: true
+          example: "All systems operational."
+        created_by:
+          type: string
+          nullable: true
+          example: "admin"
+        created_time:
+          type: string
+          format: date-time
+          nullable: true
+          example: "2024-07-01T07:50:00"
+        last_modified_by:
+          type: string
+          nullable: true
+          example: "admin"
+        last_modified_time:
+          type: string
+          format: date-time
+          nullable: true
+          example: "2024-07-01T15:00:00"
   responses:
+    BadRequest:
+      description: Bad Request
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+                example: "Invalid input."
     NotFound:
       description: Not Found
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/ErrorResponse'
-    BadRequest:
-      description: Bad Request, eg validation of against OpenAPI spec failed
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/BadRequestResponse'
+            type: object
+            properties:
+              error:
+                type: string
+                example: "Shift not found."
     UnprocessableEntity:
-      description: Unprocessable Entity, semantic error in request eg mismatched IDs
+      description: Unprocessable Entity
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/ErrorResponse'
+            type: object
+            properties:
+              error:
+                type: string
+                example: "Semantic error in request."
     InternalServerError:
       description: Internal Server Error
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/ErrorResponse'
-  schemas:
-    BadRequestResponse:
-      type: object
-      properties:
-        status:
-          type: integer
-        title:
-          type: string
-        detail:
-          type: string
-    ErrorResponse:
-      type: object
-      properties:
-        title:
-          type: string
-        detail:
-          type: string
-        traceback:
-          type: object
-          properties:
-            key:
-              type: string
-            type:
-              type: string
-            full_traceback:
-              type: string
+            type: object
+            properties:
+              error:
+                type: string
+                example: "An unexpected error occurred."
